testdata/baselines/reference/compiler/missingDiscriminants.errors.txt
missingDiscriminants(4,1): error TS1128: Declaration or statement expected.
missingDiscriminants(5,3): error TS1003: Identifier expected.
missingDiscriminants(5,5): error TS1005: ';' expected.
missingDiscriminants(5,5): error TS1003: Identifier expected.
missingDiscriminants(5,20): error TS1128: Declaration or statement expected.
missingDiscriminants(5,20): error TS1005: ';' expected.
missingDiscriminants(5,20): error TS1128: Declaration or statement expected.
missingDiscriminants(5,20): error TS1005: '}' expected.

==== missingDiscriminants (8 errors) ====
    
    // https://github.com/microsoft/typescript-go/issues/1020
    
    type Thing =
    ~~~~
!!! error TS1128: Declaration or statement expected.
      | { str: "a", num: 0 }
      ~
!!! error TS1003: Identifier expected.
        ~
!!! error TS1005: ';' expected.
        ~
!!! error TS1003: Identifier expected.
                       ~
!!! error TS1128: Declaration or statement expected.
                       ~
!!! error TS1005: ';' expected.
                       ~
!!! error TS1128: Declaration or statement expected.
                       ~
!!! error TS1005: '}' expected.
      | { str: "b" }
      | { num: 1 }
    
    const thing1: Thing = { str: "a", num: 0 }
    const thing2: Thing = { str: "b", num: 1 } // Shouldn't be error
    const thing3: Thing = { num: 1, str: "b" } // Shouldn't be error
    
    type Item =
      | { kind: "a", subkind: 0, value: string }
      | { kind: "a", subkind: 1, value: number }
      | { kind: "b" }
    
    const item1: Item = { subkind: 1, kind: "b" } // Error, type "b" not assignable to type "a"
    const item2: Item = { kind: "b", subkind: 1 } // Error, 'subkind' isn't a known property
    
